# Simple-Navigation-Goals

./: README.md  README_zh-CN.md  README_zh-TW.md
simple_nav_goals/: CMakeLists.txt  package.xml  setup.py
simple_nav_goals/launch/: simple_nav_goals.launch
simple_nav_goals/map/: map.pgm
simple_nav_goals/param/: goal.yaml  point.yaml
simple_nav_goals/scripts/: simple_nav_goals
simple_nav_goals/src/: simple_nav_goals.cpp
