<?xml version="1.0"?>
<package format="2">
  <name>simple_nav_goals</name>
  <version>0.0.1</version>
  <description>The simple_nav_goals package</description>

  <maintainer email="tp6u4jo6@gmail.com">Wenjiu</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <export>
    <!-- Other tools can go here -->
  </export>
</package>

